[package]
name = "head"
version = "0.1.0"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]

[dependencies]
clippy = { version = "*", optional = true }

[dependencies.sdl2]
default-features = false
features = []
version = "0.31"

[dependencies.world]
path = "../world"

[dependencies.util]
path = "../util"

[dependencies.game]
path = "../game"

