[package]
name = "llr"
version = "0.1.0"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]

[dependencies]
sdl2 = { version = "0.31", default-features = false, features = [] }
util  = { path = "../util" }
terminal_size = "0.1.7"    # Gets the size of your Linux or Windows terminal

