[package]
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
name = "main"
version = "0.1.0"

[dependencies]
structopt = "0.1.0"
structopt-derive = "0.1.0"

world = { path = "../world" }
util = { path = "../util" }
generate = { path = "../generate" }
game = { path = "../game" }
head = { path = "../head" }

