[package]
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
name = "main"
version = "0.1.0"

[dependencies]
structopt = "0.1.7"
structopt-derive = "0.1.6"

world = { path = "../world" }
util = { path = "../util" }
generate = { path = "../generate" }
game = { path = "../game" }
head = { path = "../head" }

